test/files/errors/casterr.jg
_main int ()
{
    x int = 5;
    x = x :: foo;
    0 return;
}